src/test/test-models/bad/data_index/non_data_index6.stan
parameters {
  real y[3];

}
transformed parameters {
  simplex[size(y)] z;
}
